--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,8 @@
       <p><%= post.content %></p>
       <small>By: <%= post.author || "Unknown" %></small><br/>
 
+      <a href="/edit/<%= post.id %>" class="custom-edit-btn">Edit</a>
+
       <form action="/delete/<%= post.id %>" method="POST" style="display:inline;">
         <button type="submit" onclick="return confirm('Are you sure you want to delete this post?');">Delete</button>
       </form>
@@ -28,14 +30,14 @@
 
   <h2>Add New Post</h2>
   <form action="/add" method="POST">
-    <label>Title:</label><br/>
-    <input type="text" name="title" required /><br/><br/>
+    <label>Post Title:</label><br/>
+    <input type="text" name="title" placeholder="Enter your post title here..." required /><br/><br/>
 
-    <label>Content:</label><br/>
-    <textarea name="content" rows="5" cols="50" required></textarea><br/><br/>
+    <label>Post Content:</label><br/>
+    <textarea name="content" rows="5" cols="50" placeholder="Write your post content here..." required></textarea><br/><br/>
 
-    <label>Author:</label><br/>
-    <input type="text" name="author" /><br/><br/>
+    <label>Author Name:</label><br/>
+    <input type="text" name="author" placeholder="Enter author name (optional)..." /><br/><br/>
 
     <button type="submit">Add Post</button>
   </form>
