--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,20 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <link rel="stylesheet" href="footer.css">
 </head>
-<body>
-    <footer>
+
+<footer>
         <ul class="footer-links">
             <li><a href="#">Privacy Policy</a></li>
             <li><a href="#">Terms of Service</a></li>
             <li><a href="#">Contact</a></li>
         </ul>
-        <p>&copy; 2025 Blogger. All rights reserved.</p>
+        <p id="last_message">&copy; 2025 Blogger. All rights reserved.</p>
     </footer>
-    
 </body>
 </html>
