--- a/views/header.ejs
+++ b/views/header.ejs
@@ -23,16 +23,14 @@
             <ul>
                 <li>
                     <a href="https://github.com/sudhanshu00517">
-                        <img src="github.webp" alt="GitHub">
+                        <img src="/github.webp" alt="GitHub">
                     </a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/sudhanshu-tripathi-a61644261/">
-                        <img src="Linkedin-128.webp" alt="LinkedIn">
+                        <img src="/Linkedin-128.webp" alt="LinkedIn">
                     </a>
                 </li>
             </ul>
         </div>
     </header>
-</body>
-</html>
