logout added and issues fixed

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="/header.css">
 </head>
 <body>
     <header>
@@ -19,6 +19,11 @@
                 </ul>
             </div>
         </div>
+        <div class="center">
+            <form action="/logout" method="POST" style="display:inline;">
+                <button type="submit" class="logout-btn">Logout</button>
+            </form>
+        </div>
         <div class="right">
             <ul>
                 <li>
@@ -28,7 +33,7 @@
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/sudhanshu-tripathi-a61644261/">
-                        <img src="/Linkedin-128.webp" alt="LinkedIn">
+                        <img src="https://img.freepik.com/premium-vector/square-linkedin-logo-isolated-white-background_469489-892.jpg?semt=ais_hybrid&w=740" alt="LinkedIn">
                     </a>
                 </li>
             </ul>
