--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,8 +1,8 @@
 <head>
-    <link rel="stylesheet" href="/reg.css">
+    <title>Sign Up - Blogger</title>
+    <link rel="stylesheet" href="/login.css">
     <link rel="stylesheet" href="/header.css">
     <link rel="stylesheet" href="/footer.css">
-    <title>Sign Up - Blogger</title>
 </head>
 
 <%- include("header") %>
